--- a/lotr_map.html
+++ b/lotr_map.html
@@ -7,24 +7,17 @@
 		<title>Karte, Mittelerde</title>
 		<meta charset="utf-8">
 		<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="" href="">
-	
-	
-	
 	</head>
 	
 		<body>
 		
-			<img src="lotr_map.jpg" alt="Karte" 
-				width="1280" 
-				height="1024" 
-				
-				usemap="#Landkarte">
-			<map name="Landkarte">
-			<area shape="rect" coords=""
-				href="" 
-				title="Mittelerde">
+			<map name="Mittelerde">
+
+				<area shape="poly" coords=""
+
 			</map>
+			<img src="lotr_map.jpg" width="1280" height="1024" usemap="#mittelerde">
+		 
 		
 		</body>
 </html>
