--- a/lotr_map.html
+++ b/lotr_map.html
@@ -7,16 +7,25 @@
 		<title>Karte, Mittelerde</title>
 		<meta charset="utf-8">
 		<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="map_styles.css" href="map_styles.css">
 	</head>
 	
 		<body>
 		
 			<map name="Mittelerde">
 
-				<area shape="poly" coords=""
+				<area 
+					shape="poly" 
+					coords="740, 880, 720, 940, 833, 1005, 872, 874, 850, 825"
+					href="https://de.wikipedia.org/wiki/Kaffee"
+					target="_blank"
+					alt="Kaffee"
+					title="Kaffee"
+				>
 
 			</map>
-			<img src="lotr_map.jpg" width="1280" height="1024" usemap="#mittelerde">
+			
+			<img src="old_map.jpg" width="3840" height="2160" usemap="#Mittelerde" alt="Mittelerde">
 		 
 		
 		</body>
