--- a/lotr_map.html
+++ b/lotr_map.html
@@ -7,6 +7,8 @@
 		<title>Karte, Mittelerde</title>
 		<meta charset="utf-8">
 		<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		<meta http-equiv="X-UA-Compatible"  content="IE=edge" />
 		<link rel="map_styles.css" href="map_styles.css">
 	</head>
 	
@@ -16,16 +18,25 @@
 
 				<area 
 					shape="poly" 
-					coords="740, 880, 720, 940, 833, 1005, 872, 874, 850, 825"
-					href="https://de.wikipedia.org/wiki/Kaffee"
-					target="_blank"
-					alt="Kaffee"
-					title="Kaffee"
+					coords="1581,965, 1551,1049, 1685,1042, 1707,999, 1669,967 "
+					href=""
+					target=""
+					alt="Isengard"
+					title="Isengard"
 				>
-
+				
+				<area 
+					shape="circle" 
+					coords="2414,1432,80"
+					href=""
+					target=""
+					alt="Minas Tirith"
+					title="Minas Tirith"
+				>
+				
 			</map>
 			
-			<img src="old_map.jpg" width="3840" height="2160" usemap="#Mittelerde" alt="Mittelerde">
+			<img src="lotr_map_pic.jpg" width="3840" height="2160" usemap="#Mittelerde" alt="Mittelerde">
 		 
 		
 		</body>
